# libvsqx

./: CMakeLists.txt  LICENSE  README.md  libvsqx.cpp  test.vsqx  test1.cpp  vsqx.h
cmake/: FindTinyXML2.cmake  FindTinyXML2.cmake~
